# Face_Recognition

./: CMakeLists.txt  MTCNN-MNN  README.md  auto.sh
models/: mobilefacenet.mnn
src/: assist.hpp  face_aligner.cpp  face_aligner.hpp  face_detect.cpp  face_detect.h  main.cpp  mobileface.cpp  mobileface.hpp
